fix: Input text color in dark mode

--- a/src/component/form/Input.module.sass
+++ b/src/component/form/Input.module.sass
@@ -10,6 +10,7 @@
   display: inline-block
   border-radius: 5px
 
+
   input
     display: inline-block
     outline: none
@@ -17,3 +18,4 @@
     background: none
     font-size: 1.2rem
     margin: 0 10px
+    color: var(--color)
